# controllers/pets.controller.js
@@ -1,5 +1,4 @@
 const { providers } = require('../providers');
-// const { HttpException } = require('../helpers');
 const { responseTemplates } = require('../constants');
 const services = require('../services');
 
@@ -8,18 +7,18 @@ class Pets {
 
   static async getAllPets(req, res, next) {
     try {
-      const { page = 1, limit = 10 } = req.query;
+      const { page, limit } = req.query;
       const { id: owner } = req.user;
       const skip = (page - 1) * limit;
 
-      const pets = await services.Pets.getPets({
+      const { pets, totalPages } = await services.Pets.getPets({
         owner,
         skip,
         limit,
       });
 
       //  --RESPONSE--
-      res.json({ page, limit, data: pets });
+      res.json({ page, limit, totalPages, data: pets });
     } catch (e) {
       next(e);
     }
@@ -31,7 +30,8 @@ class Pets {
       await services.Pets.addOnePet({
         ...req.body,
         owner,
-        avatarURL: 'dddd',
+        avatarURL:
+          'https://krasivosti.pro/uploads/posts/2021-04/1618053923_50-p-samie-milie-sobachki-sobaki-krasivo-foto-51.jpg',
       });
 
       //  --RESPONSE--
@@ -45,14 +45,11 @@ class Pets {
   }
   static async removePet(req, res, next) {
     try {
-      const { petId } = req.params;
+      const { id: petId } = req.params;
       await services.Pets.deletePet(petId);
 
       //  --RESPONSE--
-      res.status(201).json({
-        ...responseTemplates.SUCCESS_POST_RESPONSE,
-        message: 'Pet deleted successfully',
-      });
+      res.status(204).send();
     } catch (e) {
       next(e);
     }
